<resources>
    <string name="app_name">ThePersonalTrainerClub</string>
    <string name="app_bar_name">GymUs</string>
    <string name="trainer">Trainer</string>
    <string name="athlete">Athlete</string>
    <!-- Login -->
    <string name="login_email_placeholder">user@domain.com</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_button">Register</string>
    <string name="login_error_title">Error</string>
    <string name="login_error_empty_field">There are empty fields</string>
    <string name="login_error_wrong_user">User or password incorrect</string>
    <string name="login_error_invalid_email">Wrong email format</string>
    <string name="login_error_default">An error occurred while trying to log in</string>
    <!-- Register -->
    <string name="register_bar_name">User Registry</string>
    <string name="register_error_duplicate_user">A user with that email already exists</string>
    <string name="register_error_wrong_user_data">User data is incorrect</string>
    <string name="register_error_default">An error occurred while trying to register</string>
    <string name="register_error_empty_field">There are empty/invalid fields</string>
    <string name="register_ok">User registered successfully</string>
    <string name="register_isTrainer_placeholder">Enable it if you are a trainer too</string>
    <string name="register_pwd_placeholder">Password (min. 6 characters)</string>
    <string name="register_lastName_placeholder">Last name</string>
    <string name="register_name_placeholder">Name</string>
    <string name="register_email_placeholder">Email</string>
    <string name="register_register_button">Register</string>
    <string name="register_genderLabel_text">Gender:</string>
    <string name="register_genderFemale_text">Female</string>
    <string name="register_genderMale_text">Male</string>
    <!-- Type selection -->
    <string name="type_selection_title">Switch role</string>
    <string name="type_selection_title_label">Choose your role</string>
    <!-- Fragment Class -->>
    <string name="fragment_class_sport">Futbol</string>
    <string name="fragment_class_name_location">Gym name</string>
    <string name="fragment_class_date">01 January 2018</string>
    <string name="fragment_class_time">16:00 to 17:00</string>
    <string name="fragment_class_number_user">Pupils (10 / 10)</string>
    <string name="fragment_class_price">10� / Class</string>
    <string name="fragment_class_name_instructor">Name</string>
    <string name="fragment_class_lastname_instructor">LastName</string>
    <string name="fragment_button_vote">Vote</string>
    <string name="fragment_button_cancel">Cancel</string>
    <string name="fragment_button_book">Book</string>
    <!-- Activity Add Class -->
    <string name="add_class_section_1">What class do you want create</string>
    <string name="add_class_section_2">Where</string>
    <string name="add_class_section_3">Schedule</string>
    <string name="add_class_section_4">Duration</string>
    <string name="add_class_section_5">Frequency</string>
    <string name="add_class_section_6">Period</string>
    <string name="add_class_section_7">Maximun number of pupils</string>
    <string name="add_class_section_8">Price for class</string>
    <string name="add_class_section_9">Cancelation policy</string>
    <string name="add_class_section_10">Description</string>
    <string name="add_class_save_class_button_title">Save class</string>
    <!-- Menu -->
    <string name="menu_activities_title">Activities</string>
    <string name="menu_locations_title">Locations</string>
    <string name="menu_logout_title">Logout</string>
    <string name="menu_save_title">Save</string>
    <!-- Add sport -->
    <string name="add_sport_title">Set activity</string>
    <string name="add_sport_get_activities_error">Error getting activities</string>
    <string name="add_sport_error">Error setting activities</string>
    <!-- Add location -->
    <string name="add_location_title">Set location</string>
    <string name="add_location_error">Cannot get user location</string>
    <string name="add_location_search_placeholder">Search for places</string>
    <string name="add_location_set_location_title">Set new location</string>
    <string name="add_location_location_description_placeholder">Location description</string>
    <string name="add_location_location_placeholder">Location</string>
    <string name="add_location_use_current_location_button_title">Use current location</string>
    <string name="add_location_search_location_button_title">Search for location</string>
    <string name="add_location_no_address_found">No matching addresses found</string>
    <string name="add_location_no_last_location_message">No last location known</string>
    <string name="add_location_user_location_error_message">Cannot get user location</string>
    <string name="add_location_on_search_error_message">You need to provide a location</string>
    <string name="add_location_on_save_error_message">You need to provide a description and a location</string>
    <string name="add_location_server_error">Some error has occurred</string>
    <!-- Add class -->
    <string name="add_class_frequency_01">Unique</string>
    <string name="add_class_frequency_02">Daily</string>
    <string name="add_class_frequency_03">Weekly</string>
    <string name="add_class_frequency_04">Monthly</string>
    <string name="add_class_start_date">Start: 12 Sep 2018</string>
    <string name="add_class_end_date">End: 12 Sep 2018</string>
    <string name="add_class_cancellation_policy">Choose the cancellation policy</string>
    <string name="add_class_description">Description</string>
    <!-- Cancellation Polity -->
    <string name="cancellation_polity_01">The class can be annulled free of charge without cost to the user. But it must be discharged before the start of the activity so it is not considered to have been made</string>
    <string name="cancellation_polity_02">The class can be cancelled up to 24 hours before the start of the class. But No 20% charge of the cost of the class is made in terms of expenses for management.</string>
    <string name="cancellation_polity_03">This rate is applicable only to classes with a start of 48h from the purchase and the class can be cancelled up to 24 hours before having a cost of 10% of the cost of the class.</string>

    <!-- Trainer dashboard -->
    <string name="trainer_management_title">Management</string>
    <string name="trainer_management_open_classes_label">Open classes</string>
    <string name="trainer_management_active_bookings_label">Active bookings</string>
    <string name="trainer_management_locations_label">Where do you teach?</string>
    <string name="trainer_management_look_for_locations_label">Where do you look for classes?</string>
    <string name="trainer_management_sports_label">What do you teach?</string>
    <string name="trainer_management_practise_sports_label">What do you practise?</string>
    <string name="trainer_management_delete_book_error">There is an error deleting your booking</string>
    <string name="trainer_management_delete_class_error">Feature not implemented</string>
    <!-- New class -->
    <string name="new_class_title">New class</string>
    <string name="new_class_sport_error">You have to select a sport</string>
    <string name="new_class_location_error">You have to select a location</string>
    <string name="new_class_other_error">There is an error creating a new class</string>
    <string name="new_class_success">You have created a new class</string>
    <!-- User settings -->
    <string name="user_settings_title">Settings</string>
    <string name="user_settings_change_photo">Change your photo</string>
    <string name="user_setting_server_error">Some error has occurred</string>
    <string name="user_settings_type_trainer">Trainer</string>
    <string name="user_settings_type_athlete">Athlete</string>
    <string name="user_settings_choose_source_image">Choose source image</string>
    <string name="user_settings_source_camera">Camera</string>
    <string name="user_settings_source_gallery">Gallery</string>
    <!-- Class -->
    <string name="class_detail_title">Class</string>
    <string name="class_detail_book_button_title">Book</string>

    <!-- Search class -->
    <string name="search_class_title">Search class</string>
    <string name="search_class_section01">What activity are you looking for?</string>
    <string name="search_class_section02">Where are you lokking for?</string>
    <string name="search_class_section03">In a radio of</string>
    <string name="search_class_section04">What schedule you are ding well </string>
    <string name="search_class_section05">When</string>
    <string name="search_class_section06">Min price</string>
    <string name="search_class_any">Any</string>
    <string name="search_class_button_search">Search for Activities</string>
    <string name="search_class_search_error">There is an error searching classes</string>
    <string name="search_class_no_classes_found">Sorry, still there are not classes available with the criteria specified</string>
    <!-- Search Class Result -->
    <string name="search_classes_result_title">Classes found</string>
    <string name="search_classes_book_error">There is an error with your booking</string>
</resources>
