<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.dashboard.DashboardActivity">
    <item
        android:id="@+id/action_activities"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_selected"
        android:title="@string/menu_activities_title"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_locations"
        android:orderInCategory="200"
        android:title="@string/menu_locations_title"
        android:icon="@drawable/ic_location_selected"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="300"
        android:title="@string/menu_logout_title"
        app:showAsAction="never"/>
</menu>