<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/darkGray"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_weight="5"
            android:background="@color/darkGray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/fragment_class_sport"
                android:textAlignment="center"
                android:textColor="@color/text"
                android:textSize="17sp"
                tools:text="Balonmano" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/darkGray"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/ic_icon" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/ic_icon" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/ic_icon" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/ic_icon" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                app:srcCompat="@drawable/ic_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@color/darkGray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fragment_class_name_location"
                android:textColor="@color/text"
                tools:text='Gimnasio "El gran atardecer"' />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fragment_class_date"
                android:textColor="@color/text"
                tools:text="12 Septiembre 2018" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fragment_class_time"
                android:textColor="@color/text"
                tools:text="De 16:00 a 17:00" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fragment_class_number_user"
                android:textColor="@color/text"
                tools:text="Alumnos ( 12/20 )" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/fragment_class_price"
                android:textColor="@color/text"
                tools:text="10€ / clase" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>