<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/med_dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:text="@string/add_location_location_description_placeholder"
            android:textColor="@color/text"
            android:textSize="@dimen/text_normal"
            tools:text="Cancelación gratuita" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:layout_marginTop="-8dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/polityText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lar_dp"
            android:layout_marginEnd="@dimen/med_dp"
            android:layout_marginStart="@dimen/med_dp"
            android:layout_marginTop="@dimen/lar_dp"
            android:background="@color/colorRedSoft"
            android:ems="10"
            android:hint="@string/cancellation_polity_01"
            android:inputType="textMultiLine"
            android:padding="@dimen/med_dp"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/med_dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:text="@string/add_location_location_description_placeholder"
            android:textColor="@color/text"
            android:textSize="@dimen/text_normal"
            tools:text="Cancelación parcial" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:layout_marginTop="-8dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/polityText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lar_dp"
            android:layout_marginEnd="@dimen/med_dp"
            android:layout_marginStart="@dimen/med_dp"
            android:layout_marginTop="@dimen/lar_dp"
            android:background="@color/colorRedNormal"
            android:ems="10"
            android:hint="@string/cancellation_polity_02"
            android:inputType="textMultiLine"
            android:padding="@dimen/med_dp"
            android:textSize="@dimen/text_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/med_dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:text="@string/add_location_location_description_placeholder"
            android:textColor="@color/text"
            android:textSize="@dimen/text_normal"
            tools:text="Cancelación flexible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dimension_line_separator"
            android:layout_marginTop="-8dp"
            android:background="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/polityText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/lar_dp"
            android:layout_marginEnd="@dimen/med_dp"
            android:layout_marginStart="@dimen/med_dp"
            android:layout_marginTop="@dimen/lar_dp"
            android:background="@color/colorRedDark"
            android:ems="10"
            android:hint="@string/cancellation_polity_03"
            android:inputType="textMultiLine"
            android:padding="@dimen/med_dp"
            android:textSize="@dimen/text_normal" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>